@@ -2,6 +2,8 @@ git-annex (0.04) UNRELEASED; urgency=low
 
   * Add build dep on libghc6-testpack-dev.
   * Add annex.version, which will be used to automate upgrades.
+  * Reorganised the layout of .git/annex/ , moving cached file contents
+    to .git/annex/objects/<key>/<key>
 
  -- Joey Hess <joeyh@debian.org>  Mon, 08 Nov 2010 12:36:39 -0400
 
